--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
             $('.page-header__top').removeClass('page-header__top--fixed');
         }
     });
-    svg4everybody();
 
     $(function () {
-        const apiUrl = 'https://api.github.com/orgs/faas-info';
-        // const apiUrl = 'https://api.github.com/softreck/repos';
+        const apiUrl = 'https://api.github.com/orgs/paas-info';
+        // const apiUrl = 'https://api.github.com/softreck';
         let totalStars = 0;
         const languages = {};
 
