APi foundation version of project with server, devops apicra, bash support

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,3 +1,14 @@
-<div class="footer">
-    <h4>local: <a href="http://localhost:3001/" rel="nofollow">localhost:3001/</a> | production: <a href="http://app.paas.info/" rel="nofollow">app.paas.info</a></h4>
+
+<div class="page-content">
+
 </div>
+
+<footer class="page-footer">
+    <div class="page-footer__inner">
+        <div class="footer-copyright">
+            © 2020 Softreck OÜ. All rights reserved. Softreck and the softreck logo are trademarks of Softreck OÜ
+        </div>
+    </div>
+</footer>
+
+
