--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="images/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+<!--    <link rel="stylesheet" href="css/index.css">-->
 
     <title>Softreck Open Source Projects</title>
 
-    <script src="//get.jloads.com/jloads-target.js"></script>
+    <script src="//get.jloads.com/jloads-url.js"></script>
 
     <script>
 
         jloadsUrl({
             "head": [
                 "//code.jquery.com/jquery-3.5.1.min.js",
+                // "vendors/jquery-3.2.1.min.js",
                 // "cdn/jquery-3.3.1.slim.min.js",
-                // "//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css",
-                // "//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js",
-                "//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js",
-                "//www.paas.info/css/style.css",
-                "//www.paas.info/css/fade-in.css",
-                // "//www.paas.info/cdn/flowtype.js",
+                "css/fade-in.css",
+                "css/index.css",
+                // "js/scroll.js",
+                "js/github.js",
             ],
             "body": [
-                "/html/header.html",
+                "html/header.html",
+                "html/footer.html",
+                "js/config.js"
             ],
             // "form": [
             //     "//www.paas.info/js/form.js",
@@ -50,132 +51,5 @@
 <body>
 
 
-<div class="page-content">
-
-</div>
-
-<footer class="page-footer">
-    <div class="page-footer__inner">
-        <div class="footer-copyright">
-            © 2020 Softreck OÜ. All rights reserved. Softreck and the softreck logo are trademarks of Softreck OÜ
-        </div>
-    </div>
-</footer>
-
-
-<script src="vendors/jquery-3.2.1.min.js"></script>
-<script>
-    $(window).scroll(function () {
-        if ($(window).scrollTop() >= 140) {
-            $('.page-header__top').addClass('page-header__top--fixed');
-        } else {
-            $('.page-header__top').removeClass('page-header__top--fixed');
-        }
-    });
-
-    function loadGithubOrg(organisation) {
-
-        const apiUrl = 'https://api.github.com/orgs/' + organisation;
-        // const apiUrl = 'https://api.github.com/softreck';
-        let totalStars = 0;
-        const languages = {};
-
-        $('.page-content').append(`<div class="page-content__section ${organisation}">
-        <div class="page-content__wrapper">
-            <h2 class="page-heading"></h2>
-            <div class="languages">
-                <h3 class="languages__title">Top languages</h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="page-content__section page-content__section--repos ${organisation}">
-        <div class="page-content__wrapper">
-            <ol class="repos"></ol>
-        </div>
-    </div>`);
-
-        $('.' + organisation + ' .page-heading').append(`<span>${organisation}</span>`);
-
-        $.ajax(`${apiUrl}/repos?per_page=1000`, {
-            success: (data) => {
-                data.sort((a, b) => b.stargazers_count - a.stargazers_count).forEach((repo) => {
-                    totalStars += repo.stargazers_count;
-
-                    if (repo.language) {
-                        languages[repo.language] = languages[repo.language] ? ++languages[repo.language] : 1;
-                    }
-
-                    $('.' + organisation + ' ol.repos').append(`
-              <li class="repos__item repo">
-                  <div class="card">
-                      <header class="card__header">
-                          <a class="repo__title" href="${repo.html_url}" target="_blank">
-                              <span class="repo__title-text">${repo.name}</span>
-                              <svg class="icon repo__title-icon">${repo.name.startsWith('ext-') ? 'package' : 'repo'}</svg>
-                          </a>
-                      </header>
-                      <div class="card__content">
-                          <div class="repo__description">${repo.description || ''}</div>
-                      </div>
-                      <footer class="card__footer">
-                          <div class="repo__summary">
-                              ${!repo.language ? '' :
-                        `<span class="repo__summary-item">
-                                      <span class="repo__summary-text">${repo.language}</span>
-                                  </span>`
-                    }
-                              <a href="${repo.html_url}/stargazers" target="_blank" class="repo__summary-item">
-                                  <span class="repo__summary-text">${repo.stargazers_count}</span>
-                              </a>
-                              <a href="${repo.html_url}/network" target="_blank" class="repo__summary-item">
-                                  <span class="repo__summary-text">${repo.forks_count}</span>
-                              </a>
-                              ${!repo.homepage ? '' :
-                        `<a href="${repo.homepage}" target="_blank" class="repo__summary-item">
-                                      <span class="repo__summary-text">Website</span>
-                                  </a>`
-                    }
-                          </div>
-                      </footer>
-                  </div>
-              </li>
-            `);
-                });
-
-                $('.stats__count-stars').text(totalStars);
-                $('.stats__count-repos').text(data.length);
-                $('.stats__count-languages').text(Object.keys(languages).length);
-
-                const colors = ['111111', '777777', 'cccccc'];
-                Object.keys(languages).sort((a, b) => languages[b] - languages[a]).slice(0, 3).forEach((language, index) => {
-                    $('.' + organisation + ' .languages').append(
-                        `<a class="languages__name" href="https://github.com/softreck?language=${language.toLowerCase()}" target="_blank" style="background-color:#${colors[index]};">${language}</a>`
-                    );
-                });
-            }
-        });
-    } //function     loadGithubOrg();
-
-
-    function loadGitProjects(projects) {
-        for (var i in projects) {
-            var project = projects[i];
-            loadGithubOrg(project);
-        }
-    }
-
-
-    loadGitProjects([
-        "api-foundation",
-        "apicra",
-        "api-build",
-        "apisql",
-        "apiunit",
-        "apiexec",
-        "apifunc"
-    ]);
-
-</script>
 </body>
 </html>
