--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Softreck Open Source Projects</title>
 
-    <script src="//get.jloads.com/jloads-url.js"></script>
+    <script src="//get.jloads.com/jloads-url.js?1"></script>
     <script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
 
 
@@ -22,7 +22,6 @@
 
 
 <script>
-/*
 
     jloadsUrl({
         "head": [
@@ -59,11 +58,18 @@
         //     "//logo.paas.info/2/cover.png"
         // ]
     });
-*/
 
-    var jloads1 = new Load("body");
-    jloads1.js("js/config.js");
 
+
+
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        console.log("DOM fully loaded and parsed");
+        var jloads1 = new Load("body");
+        jloads1.js("js/config.js");
+    });
 </script>
 
 </body>
