--- a/index.html
+++ b/index.html
@@ -4,29 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="images/favicon.ico" rel="icon" type="image/x-icon">
-    <!--    <link rel="stylesheet" href="css/index.css">-->
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <title>Softreck Open Source Projects</title>
 
-    <script src="//get.jloads.com/jloads-url.js?1"></script>
+    <script src="//get.jloads.com/jloads.min.js"></script>
     <script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <script>
 
-        jloadsUrl({
+        jl.target({
             "head": [
-                // "//code.jquery.com/jquery-3.5.1.min.js",
-                // "vendors/jquery-3.2.1.min.js",
-                // "cdn/jquery-3.3.1.slim.min.js",
                 "css/fade-in.css",
                 "css/index.css",
-                // "js/scroll.js",
                 "js/github.js",
             ],
-            // "body": [
-            //     "js/config.js"
-            // ],
             ".header": [
                 "html/header.html",
             ],
@@ -37,21 +31,14 @@
 
     </script>
 
-<!--    <script>-->
-<!--        document.addEventListener("DOMContentLoaded", function(event) {-->
-<!--            console.log("DOM fully loaded and parsed");-->
-<!--            var jloads1 = new Load("body");-->
-<!--            jloads1.js("js/config.js");-->
-<!--        });-->
-<!--    </script>-->
-
 </head>
 <body>
 
 <div class="header"></div>
-<div class="page-content"></div>
-<div class="footer"></div>
 
+<div class="page-content"></div>
+
+<div class="footer"></div>
 
 
 </body>
